--- a/app/views/suppliers/index.html.slim
+++ b/app/views/suppliers/index.html.slim
@@ -1,2 +1,1 @@
-h1 Suppliers#index
-p Find me in app/views/suppliers/index.html.slim
+= render(partial: 'agents/index', locals: { type: 'Suppliers', agents: @suppliers })
