--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,4 +8,8 @@ header.row
       li.nav-item
         = active_link_to('Suppliers', suppliers_path, active: :inclusive, class: 'nav-link')
       li.nav-item
+        = active_link_to('Client Deals', client_deals_path, active: :inclusive, class: 'nav-link')
+      li.nav-item
+        = active_link_to('Supplier Deals', supplier_deals_path, active: :inclusive, class: 'nav-link')
+      li.nav-item
         a.nav-link.disabled href="#" Disabled
