--- a/app/views/offers/new_for_client.html.slim
+++ b/app/views/offers/new_for_client.html.slim
@@ -1,7 +1,9 @@
-h1 New Client Offer
 div.row
-  div.col-sm-12
+  div.offset-sm-2.col-sm-8
+    h1 New Client Offer
+    hr
     = simple_form_for(@offer, html: { class: 'form-horizontal' }, wrapper: :horizontal_form) do |form|
+      = form.hidden_field :type, value: ClientOffer.to_s
       = form.association :deal, collection: ClientDeal.all, as: :select, include_blank: false
-      = form.association :agent,collection: Client.all, as: :select, include_blank: false, label_method: lambda { |o| "#{o.name} | #{o.company_name}" }
-      = form.button :submit
+      = form.association :agent, collection: Client.all, as: :select, include_blank: false, label_method: lambda { |o| "#{o.name} | #{o.company_name}" }
+      = form.button :submit, class: 'btn btn-primary'
