--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -11,6 +11,8 @@ header.row
         = active_link_to('Client Deals', client_deals_path, active: :inclusive, class: 'nav-link')
       li.nav-item
         = active_link_to('Supplier Deals', supplier_deals_path, active: :inclusive, class: 'nav-link')
+      li.nav-item
+        = active_link_to('Offers', offers_path, active: :inclusive, class: 'nav-link')
       li.nav-item.dropdown
         a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" Menu
         div.dropdown-menu
