--- a/app/views/client_deals/show.html.slim
+++ b/app/views/client_deals/show.html.slim
@@ -1,2 +1,1 @@
-h1 ClientDeals#show
-p Find me in app/views/client_deals/show.html.slim
+= render(partial: 'deals/show', locals: { deal: @client_deal })
