--- a/app/views/supplier_deals/show.html.slim
+++ b/app/views/supplier_deals/show.html.slim
@@ -1,2 +1,1 @@
-h1 SupplierDeals#show
-p Find me in app/views/supplier_deals/show.html.slim
+= render(partial: 'deals/show', locals: { deal: @supplier_deal })
