--- a/app/views/client_deals/show.html.slim
+++ b/app/views/client_deals/show.html.slim
@@ -1,1 +1,1 @@
-= render(partial: 'deals/show', locals: { deal: @client_deal })
+= render(partial: 'deals/show', locals: { deal: @client_deal, offer: @offer })
