--- a/app/views/deals/_show.html.slim
+++ b/app/views/deals/_show.html.slim
@@ -1,6 +1,24 @@
 div.raw
+  div.raw
+    div.col-sm-12
+      h1 = "#{deal.id} #{deal.name}"
+  div.raw
+    div.col-sm-4
+      div.btn-group.btn-group role="group" aria-label="Actions"
+        button type="button" id="save_deal_values" class="btn btn-success" Save
+        button type="button" class="btn btn-info" Import
+    div.col-sm-8.text-sm-right  
+        = simple_form_for @offer, url: offers_path, html: { class: 'form-inline' }  do |f|
+          = f.hidden_field :deal_id, value: params[:id]
+          - if deal.type == 'ClientDeal'
+            = f.hidden_field :type, value: ClientOffer.to_s
+            = f.association :agent, label: 'Client:', collection: Client.all, as: :select, include_blank: false, label_method: lambda { |o| "#{o.name} | #{o.company_name}" }
+          - if deal.type == 'SupplierDeal'
+            = f.hidden_field :type, value: SupplierOffer.to_s
+            = f.association :agent, label: 'Supplier:', collection: Supplier.all, as: :select, include_blank: false, label_method: lambda { |o| "#{o.name} | #{o.company_name}" }
+          = f.button :submit, 'Send', class: 'btn btn-primary'  
+div.raw
   div.col-sm-12
-    h1 = "#{deal.id} #{deal.name}"
     div.table-responsive
       table.table.table-striped
         thead
@@ -12,6 +30,8 @@ div.raw
             th Promo Unit Price
             th Promo
             th Description
+            th Accepted
+            th Probability
         tbody
             tr
               td = deal.sku
@@ -21,22 +41,25 @@ div.raw
               td = deal.promo_unit_price
               td = deal.promo
               td = deal.description
+              td = deal.accepted
+              td = deal.probability
 div.raw
   div.col-sm-12
-    div.table-responsive
-      table.table.table-striped
-        thead
-          tr
-          th id
-          th Plan
-          th Accep
-          th Prob
-          tbody
-            - deal.plans.each do |plan|
-              tr
-                td = plan.id
-                td = plan.name
-                td = plan.accepted
-                td = plan.probability
-                - plan.values.each do |value|                  
-                  td = value.value      
+    = form_tag(values_path, method: 'post', id: 'values') do
+      div.table-responsive
+        table.table.table-striped
+          thead
+            tr
+              th Plan Type
+              - deal.header_dates.each do |date|
+               th.small = date.to_date
+            tbody
+              - deal.plans.each do |plan|
+                tr
+                  td = plan.name
+                  - plan.values.each do |value|                  
+                    td colspan=period_cospan(plan.name) 
+                      - if editable(plan.name)
+                        = number_field(:values, value.id, min: 0.0, step: 0.01, value: value.value, class: 'value')
+                      - else
+                        =value.value
