--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -13,12 +13,5 @@ header.row
         = active_link_to('Supplier Deals', supplier_deals_path, active: :inclusive, class: 'nav-link')
       li.nav-item
         = active_link_to('Offers', offers_path, active: :inclusive, class: 'nav-link')
-      li.nav-item.dropdown
-        a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" Menu
-        div.dropdown-menu
-          = link_to('New deal', new_deal_path, class: 'dropdown-item')          
-          div class="dropdown-divider"
-          = link_to('Send Client offer', new_for_client_offers_path, class: 'dropdown-item')
-          = link_to('Send Supplier offer', new_for_supplier_offers_path, class: 'dropdown-item')
       li.nav-item
-        a.nav-link.disabled href="#" Disabled
+        = active_link_to('New deal', new_deal_path, class: 'nav-link')
