Add buisness logic

--- a/app/views/deals/_show.html.slim
+++ b/app/views/deals/_show.html.slim
@@ -3,14 +3,16 @@ div.raw
     div.col-sm-12
       h1 = "#{deal.id} #{deal.name}"
   div.raw
-    div.col-sm-4
+    div.col-sm-5
       button type="button" id="save_deal_values" class="btn btn-success" Save
-      = form_tag(import_deal_path(deal), method: 'post', class: 'form-inline')
+      = form_tag(recalc_deal_path(deal), method: 'post', class: 'form-inline', style: 'display:inline;')
+        = submit_tag 'Recalc', class: 'btn btn-primary'
+      = form_tag(import_deal_path(deal), method: 'post', class: 'form-inline', style: 'display:inline;', multipart: true)
+        = hidden_field_tag 'deal_type', deal.type
         div.form-group
           = file_field_tag :file, class: 'form-control'
-        = submit_tag 'Import', class: 'btn btn-info' 
-        
-    div.col-sm-8.text-sm-right  
+        = submit_tag 'Import', class: 'btn btn-info'         
+    div.col-sm-7.text-sm-right  
         = simple_form_for @offer, url: offers_path, html: { class: 'form-inline' }  do |f|
           = f.hidden_field :deal_id, value: params[:id]
           - if deal.type == 'ClientDeal'
@@ -49,7 +51,7 @@ div.raw
 div.raw
   div.col-sm-12
     = form_tag(values_path, method: 'post', id: 'values') do
-      div.table-responsive
+      div.table-responsive.text-sm-center
         table.table.table-striped
           thead
             tr
@@ -61,7 +63,7 @@ div.raw
                 tr
                   td = plan.name
                   - plan.values.each do |value|                  
-                    td colspan=period_cospan(plan.name) 
+                    td colspan=period_cospan(plan.name) class=value.accepted
                       - if editable(plan.name)
                         = number_field(:values, value.id, min: 0.0, step: 0.01, value: value.value, class: 'value')
                       - else
