--- a/app/views/deals/_show.html.slim
+++ b/app/views/deals/_show.html.slim
@@ -52,7 +52,7 @@ div.raw
   div.col-sm-12
     = form_tag(values_path, method: 'post', id: 'values') do
       div.table-responsive.text-sm-center
-        table.table.table-striped
+        table.table.table-striped.table-bordered
           thead
             tr
               th Plan Type
